--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <main>
-      <div class="hover__img">
+      <div class="container__img">
         <img class="nft" src="./images/image-equilibrium.jpg" alt="" />
         <img class="view__img" src="./images/icon-view.svg" alt="" />
       </div>
