added: <div class = "viewicon__img"> on view__img NFT image hover effect fixed: removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <main>
       <div class="container__img">
         <img class="nft" src="./images/image-equilibrium.jpg" alt="" />
-        <img class="view__img" src="./images/icon-view.svg" alt="" />
+        <div class="viewicon__img">
+          <img class="view__img" src="./images/icon-view.svg" alt="" />
+        </div>
       </div>
       <div class="description">
         <h2>Equilibrium #3429</h2>
